# automatic-code-generation

./: CMakeLists.txt  README.md
autoGenTest/: initSimpleCounter.m  simpleCounter  simpleCounter.slx
autoGenTest-WBtoolbox/: autoGenTest.slx  initAutoGenTest.m
autoGenTest-WBtoolbox/autoGenTest_ert_rtw/: autoGenTest.cpp  autoGenTest.h  autoGenTest.mk  autoGenTest_private.h  autoGenTest_types.h  buildInfo.mat  codeInfo.mat  defines.txt  ert_main.cpp  modelsources.txt  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_defines.h  rt_nonfinite.cpp  rt_nonfinite.h  rtw_proj.tmw  rtwtypes.h  rtwtypeschksum.mat
autoGenTest-WBtoolbox/autoGenTest_ert_rtw/html/: autoGenTest_codegen_rpt.html  autoGenTest_contents.html  autoGenTest_cpp.html  autoGenTest_h.html  autoGenTest_interface.html  autoGenTest_metrics.html  autoGenTest_private_h.html  autoGenTest_replacements.html  autoGenTest_subsystems.html  autoGenTest_survey.html  autoGenTest_trace.html  autoGenTest_types_h.html  contents_file.tmp  ert_main_cpp.html  rtGetInf_cpp.html  rtGetInf_h.html  rtGetNaN_cpp.html  rtGetNaN_h.html  rt_defines_h.html  rt_matrx_c.html  rt_nonfinite_cpp.html  rt_nonfinite_h.html  rt_printf_c.html  rtwtypes_h.html
autoGenTest/simpleCounter_ert_rtw/: buildInfo.mat  codeInfo.mat  compileInfo.mat  defines.txt  ert_main.cpp  modelsources.txt  rt_defines.h  rtw_proj.tmw  rtwtypes.h  rtwtypeschksum.mat  simpleCounter.cpp  simpleCounter.h  simpleCounter.mk  simpleCounter_private.h  simpleCounter_types.h
autoGenTest/simpleCounter_ert_rtw/html/: contents_file.tmp  ert_main_cpp.html  rt_defines_h.html  (+13 more)
